// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTeaserHelper with linkToProfile and popover enabled, on touch screen renders button 1`] = `
<div>
  <button />
</div>
`;

exports[`UserTeaserHelper with linkToProfile, on desktop renders link 1`] = `
<div>
  <a />
</div>
`;

exports[`UserTeaserHelper without linkToProfile renders span 1`] = `
<div>
  <span />
</div>
`;
